services/ollama/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ollama
  namespace: ollama
spec:
  ingressClassName: traefik
  rules:
    - host: ollama.vandelay
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ollama
                port:
                  number: 11434
